# turing-machine-application

./: CMakeLists.txt  LICENCSE.txt  README.md
Header/: alphabet.h  computation.h  tape.h  turing_machine.h
header/: alphabet.h  computation.h  couple.h  definitions.h  gui_app_helpers.h  helper.h  tape.h  turing_machine.h
source/: generate_binary.cpp  gui_app.cpp
source/template/: execution_template.cpp.in
